--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ analytics: UA-83979019-1
 disqus-shortname: webjeda-demo
 
 # Color schemes
-color-1: '#3B97D3'
+color-1: '#03A9F4'
 color-2: '#26B99A'
 
 # Author pictre 100x100 --> keep it inside img folder.
